tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__TravellersGloves-AAAAAAAAAAAAAAAAAAAG-Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1785,
  "prerequisites": [
    1781
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Putting redstone on my weapon makes it faster. So why don't I put it on my hands directly!\nThis will increase your mining speed.\n\nHint:\nEvery Armor part has 3 Slots for modification, aside from gloves, which have 5.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Traveller's Gloves Upgrades",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1781
  ],
  "rewards": [],
  "tasks": []
}
