tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__TravellersGoggle-AAAAAAAAAAAAAAAAAAAG9g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1782,
  "prerequisites": [
    1781
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Nightvision is very useful. If you combine your Goggles with a night vision potion (3:00, make sure to make 3 at a time), a golden carrot, and a flint and steel inside the Tinkers Crafting Station you get Night Vision Goggles. Place the Goggles in the Center of the Crafting Station.\n\nHint: Autorepair can be added to the goggles as well.\n\nEvery Armor has 3 slots for modification.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Traveller's Goggles Upgrades",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1781
  ],
  "rewards": [],
  "tasks": []
}
