tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__TravellersVestUp-AAAAAAAAAAAAAAAAAAAG9w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1783,
  "prerequisites": [
    1781
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your vest can be equipped with a few modifications like perfect dodge and stealth.\nPerfect dodge mean you're harder to hit and can be stacked up to 3 times.\nStealth turns you invisible while sneaking. Place the vest in the center of a Tinker's Crafting Station.\n\nHint:\nAutorepair can be added to the vest as well.\nEvery Armor part has 3 Slots for modification.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Traveller's Vest Upgrades",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1781
  ],
  "rewards": [],
  "tasks": []
}
