tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__TurretBaseTier4-AAAAAAAAAAAAAAAAAAAAzw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 207,
  "prerequisites": [
    208
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Even more range, power and upgrade slots.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lTurret Base Tier 4",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    208
  ],
  "rewards": [],
  "tasks": []
}
