tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__TurretBaseTier5-AAAAAAAAAAAAAAAAAAAA3Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 221,
  "prerequisites": [
    220
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The last one, I promise. Used for the most powerful turrets available. You wonder if they might help you take out some more... \"Dangerous\" enemies?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lTurret Base Tier 5",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    220
  ],
  "rewards": [],
  "tasks": []
}
