tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__WetDirtArmor-AAAAAAAAAAAAAAAAAAACqw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 683,
  "prerequisites": [
    5
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you don't have any armor, \"mud armor\" is better than nothing. Mud can be found in some wet biomes, or crafted from dirt and water.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 1,
    "name": "Wet Dirt Armor?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    5
  ],
  "rewards": [],
  "tasks": []
}
