tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__WhoNeedsThatDirt-AAAAAAAAAAAAAAAAAAAAew==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 123,
  "prerequisites": [
    122
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You probably have a ton of items floating around in your base. So why not use them to kill your enemies?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lWho Needs That Dirt Anyway",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    122
  ],
  "rewards": [],
  "tasks": []
}
